// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dependents component > can toggle dependents assets > dependents list 1`] = `
[
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="SmallWindFarm"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="SmallWindFarm-icon"
        />
      </div>
      <div>
        <h4>
          Jose 20kv Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          small wind farm
        </p>
        <p
          class="text-sm"
        >
          E008
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      6
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="SmallWindFarm"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="SmallWindFarm-icon"
        />
      </div>
      <div>
        <h4>
          West Coleman 50kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          small wind farm
        </p>
        <p
          class="text-sm"
        >
          E002
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      8
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="SmallWindFarm"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="SmallWindFarm-icon"
        />
      </div>
      <div>
        <h4>
          Bluey 10kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          small wind farm
        </p>
        <p
          class="text-sm"
        >
          E012
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      10
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="CoalPlantComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-regular fa-bolt-lightning"
          title="CoalPlantComplex-icon"
        />
      </div>
      <div>
        <h4>
          Best Coleman Power Station
        </h4>
        <p
          class="text-sm uppercase"
        >
          coal plant complex
        </p>
        <p
          class="text-sm"
        >
          E001
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      2
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
]
`;

exports[`Dependents component > renders error message when one or more dependents returns an error > dependents with error(s) 1`] = `
[
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="SmallWindFarm"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="SmallWindFarm-icon"
        />
      </div>
      <div>
        <h4>
          Jose 20kv Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          small wind farm
        </p>
        <p
          class="text-sm"
        >
          E008
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      6
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="SmallWindFarm"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="SmallWindFarm-icon"
        />
      </div>
      <div>
        <h4>
          West Coleman 50kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          small wind farm
        </p>
        <p
          class="text-sm"
        >
          E002
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      8
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="SmallWindFarm"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="SmallWindFarm-icon"
        />
      </div>
      <div>
        <h4>
          Bluey 10kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          small wind farm
        </p>
        <p
          class="text-sm"
        >
          E012
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      10
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="p-2 bg-red-900 rounded-md"
  >
    Failed to retrieve asset information for https://www.example.com/Instruments#E001
  </li>,
]
`;
